--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,16 @@
-body{
-    font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+@import "reset.css";
+@import "variable.css";
 
-}
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+@import "components/screen-header.css";
+@import "components/user-component.css";
 
-.status-bar{
-    display: flex;
-    justify-content: center;
-}
+@import "screens/login.css";
+@import "screens/friends.css";
 
-.status-bar__column{
-    width: 33%;
-}
-
-.status-bar__column:first-child span{
-    margin-right: 5px;
-}
-
-.status-bar__column:nth-child(2) {
-    display: flex;
-    justify-content: center;
-}
-
-.status-bar__column:last-child {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.status-bar__column .fa-battery {
-    margin: 0 5px;
+body {
+    color:#2e363e;
+    font-family: 'Noto Sans KR', sans-serif;
 }
