--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -3,7 +3,8 @@
     display: block;
     background-color: #fafafa;
     padding: 15px 0; 
-    margin-bottom: 10px;
+    margin: -10px 0 10px;
+    /* margin-bottom: 10px; */
 }
 #friends-display-link i {
     color:  rgb(0,0,0,0.3);
