--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -28,3 +28,27 @@
 .firends-screen__channel-header i{
     font-size: 13px;
 }
+
+@keyframes hideSplashScreen {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+        visibility: hidden;
+    }
+}
+
+#splash-screen{
+    background-color: var(--yellow);
+    position: absolute;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 84px;
+    animation: hideSplashScreen .5s ease-in-out forwards;
+    animation-delay: 1s;
+}
