--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -22,10 +22,46 @@
     position: absolute;
     top:-13px;
     right: -8px;
+    animation: notificationAnimation 1.5s ease-in-out infinite;
+}
+
+@keyframes notificationAnimation {
+    0% {
+        transform: none;
+    }
+    50% {
+        transform: translateY(-5px);
+    }
+    100%{
+        transform: none;
+    }
 }
 
 .nav_important{
     position: absolute;
     top:-13px;
     right: -5px;
+}
+
+@keyframes appearBtnAnimation {
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+        transform: none;
+    }
+}
+.nav__btn{
+    transform: translateY(60px);
+    animation: appearBtnAnimation .5s ease-in-out forwards;
+}
+.nav__btn:nth-child(2){
+    animation-delay: .5s;
+}
+.nav__btn:nth-child(3){
+    animation-delay: 1s;
+}
+.nav__btn:nth-child(4){
+    animation-delay: 1.5s;
 }
